whitespace fix in header @ tablet resolutions

--- a/app/assets/stylesheets/app_bootstrap.css.scss
+++ b/app/assets/stylesheets/app_bootstrap.css.scss
@@ -410,7 +410,7 @@ i {
       position:relative;
       width:94%;
       padding-top:20px;
-      padding-bottom:20px;
+      padding-bottom:21px;
     }
 
     .header-button {
